' -*- mode: plantuml; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*-
'
' Copyright (C) 2025 Marco Craveiro <marco.craveiro@gmail.com>
'
' This program is free software; you can redistribute it and/or modify it under
' the terms of the GNU General Public License as published by the Free Software
' Foundation; either version 3 of the License, or (at your option) any later
' version.
'
' This program is distributed in the hope that it will be useful, but WITHOUT
'  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
' FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License along with
' GNU Emacs; see the file COPYING. If not, write to the Free Software
' Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
@startuml
!pragma layout smetana

title ores.comms.shell Component

set namespaceSeparator ::

namespace ores #F2F2F2 {
    note "Interactive REPL (Read-Eval-Print Loop) or shell for connecting to the ORE Studio server via the binary comms protocol." as ores_comms_shell_note
    comms --- ores_comms_shell_note

    namespace comms #F2F2F2 {
        namespace shell #F2F2F2 {
            note "Configuration parsing and options for the shell." as ores_comms_shell_config_note
            config --- ores_comms_shell_config_note

        namespace config #F2F2F2 {
            '
            ' Layout groupings
            '

            together {
                class parser_exception
                class parser
            }

            together {
                struct login_options
                struct options
            }

            parser_exception -[hidden]down- parser
            login_options -[hidden]down- options

            '
            ' Class definitions
            '

            class parser_exception <<exception>> #D6B19F {
                +parser_exception(message: std::string)
                +what() const noexcept: const char*
                -{field} message_ const std::string
            }

            note top of parser_exception
            An error occurred during parsing.
            - message_: error message
            end note

            class parser #ECECEC {
                +parse(arguments: const std::vector<std::string>&, info: std::ostream&, error: std::ostream&) const: std::optional<options>
            }

            note top of parser
            Command-line parser implementation using boost program options.

            Note on logging: we are NOT logging any of the exceptions to the log in this
            class. This is by design. The logger is only initialised after the options
            have been parsed; were we to log prior to this, we would dump all the
            messages into the console. The output is very confusing for users that are
            accustomed to normal command line applications.
            end note

            struct login_options #F7E5FF {
                +{field} username std::string
                +{field} password std::string
            }

            note top of login_options
            Options for logging in to the server.
            - username: Username to use for login
            - password: Password to use for login
            end note

            struct options #F7E5FF {
                +{field} logging std::optional<telemetry::log::logging_options>
                +{field} connection std::optional<comms::net::client_options>
                +{field} login std::optional<login_options>
            }

            note top of options
            All of the configuration options required by the client.
            - logging: Configuration options related to logging, if any
            - connection: Configuration options for connecting to the server
            - login: Configuration options for logging in to the server
            end note

            ores::comms::shell::config::options o-- ores::comms::shell::config::login_options
            ores::comms::shell::config::parser ..> ores::comms::shell::config::options : returns
        }

        note "Application entry point and hosting functionality." as ores_comms_shell_app_note
        app --- ores_comms_shell_app_note

        namespace app #F2F2F2 {
            '
            ' Layout groupings
            '

            ' Group: Main application
            together {
                class host
                class application
                class repl
            }

            ' Stack vertically
            host -[hidden]down- application
            application -[hidden]down- repl

            '
            ' Class definitions
            '

            class host #ECECEC {
                +{static} execute(args: const std::vector<std::string>&, std_output: std::ostream&, error_output: std::ostream&): int
                -{static} lg(): auto&
            }

            note top of host
            Provides hosting clients to the application.
            end note

            class application #ECECEC {
                +application(connection_config: std::optional<comms::net::client_options>, login_config: std::optional<config::login_options>)
                +run() const: void
                -{static} lg(): auto&
                -{field} connection_config_ std::optional<comms::net::client_options>
                -{field} login_config_ std::optional<config::login_options>
            }

            note top of application
            Entry point for the ores client application.

            Creates a client_session and handles auto-connect/auto-login
            based on provided configuration.
            - connection_config_: optional connection configuration
            - login_config_: optional login configuration
            end note

            class repl #ECECEC {
                +repl(session: comms::net::client_session&)
                +run(): void
                -{static} lg(): auto&
                -setup_menus(): std::unique_ptr<::cli::Cli>
                -display_welcome() const: void
                -cleanup(): void
                -{field} session_ comms::net::client_session&
            }

            note top of repl
            Interactive REPL (Read-Eval-Print Loop) for the ORE Studio client.

            Provides a command-line interface for interacting with the ORE Studio server,
            including commands for connection management and data retrieval.
            - session_: reference to client session from comms
            - cleanup(): sends logout request and disconnects cleanly on exit
            end note

            ores::comms::shell::app::application ..> ores::comms::shell::app::repl : creates

            note "Command handlers for the REPL." as ores_comms_shell_commands_note
            commands --- ores_comms_shell_commands_note

            namespace commands #F2F2F2 {
                '
                ' Layout groupings
                '

                together {
                    class connection_commands
                    class currencies_commands
                    class accounts_commands
                    class variability_commands
                }

                connection_commands -[hidden]down- currencies_commands
                currencies_commands -[hidden]down- accounts_commands
                accounts_commands -[hidden]down- variability_commands

                '
                ' Class definitions
                '

                class connection_commands #ECECEC {
                    +{static} register_commands(root: cli::Menu&, session: comms::net::client_session&): void
                    +{static} process_connect(out: std::ostream&, session: comms::net::client_session&, host: std::string, port: std::string, identifier: std::string): void
                    +{static} process_disconnect(out: std::ostream&, session: comms::net::client_session&): void
                    -{static} lg(): auto&
                }

                note top of connection_commands
                Manages commands related to connections.
                end note

                class currencies_commands #ECECEC {
                    +{static} register_commands(root_menu: cli::Menu&, session: comms::net::client_session&): void
                    +{static} process_get_currencies(out: std::ostream&, session: comms::net::client_session&): void
                    +{static} process_add_currency(out: std::ostream&, session: comms::net::client_session&, iso_code: std::string, name: std::string, numeric_code: std::string, symbol: std::string, fractions_per_unit: std::string): void
                    -{static} lg(): auto&
                }

                note top of currencies_commands
                Manages commands related to currencies.

                The add command creates a new currency via the server.
                The modified_by field is set from the logged-in user.
                end note

                class accounts_commands #ECECEC {
                    +{static} register_commands(root_menu: cli::Menu&, session: comms::net::client_session&): void
                    +{static} process_create_account(out: std::ostream&, session: comms::net::client_session&, username: std::string, password: std::string, totp_secret: std::string, email: std::string): void
                    +{static} process_list_accounts(out: std::ostream&, session: comms::net::client_session&): void
                    +{static} process_login(out: std::ostream&, session: comms::net::client_session&, username: std::string, password: std::string): void
                    +{static} process_lock_account(out: std::ostream&, session: comms::net::client_session&, account_id: std::string): void
                    +{static} process_unlock_account(out: std::ostream&, session: comms::net::client_session&, account_id: std::string): void
                    +{static} process_list_login_info(out: std::ostream&, session: comms::net::client_session&): void
                    +{static} process_logout(out: std::ostream&, session: comms::net::client_session&): void
                    +{static} process_bootstrap(out: std::ostream&, session: comms::net::client_session&, username: std::string, password: std::string, email: std::string): void
                    -{static} lg(): auto&
                }

                note top of accounts_commands
                Manages commands related to accounts.
                Lock and unlock operations require admin privileges.

                The bootstrap command creates the initial admin account
                when the system is in bootstrap mode.
                end note

                class variability_commands #ECECEC {
                    +{static} register_commands(root_menu: cli::Menu&, session: comms::net::client_session&): void
                    +{static} process_list_feature_flags(out: std::ostream&, session: comms::net::client_session&): void
                    -{static} lg(): auto&
                }

                note top of variability_commands
                Manages commands related to variability subsystem.

                Handles feature flags, configuration toggles, and other
                variability-related operations.
                end note

            }
        }
    }
    }
}

' Local Variables:
' compile-command: "java -Djava.awt.headless=true -DPLANTUML_SECURITY_PROFILE=UNSECURE -DPLANTUML_LIMIT_SIZE=65535 -jar /usr/share/plantuml/plantuml.jar ores.comms.shell.puml"
' End:
@enduml
